--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </div>
 <div class="container">
 <h2>Smafour Aspiration</h2>
-<form action="connect.php" method="POST">
+<form action="https://script.google.com/macros/s/AKfycbzTv4cI3_kyhXoWoYSyG8WlFQLygYiWmJ9yefz0HKCb7n5oTbpGudOA38SXHTOVgg/exec" method="POST">
     <input type="text" id="nama" name="nama" placeholder="Nama" required>
     <input type="text" id="kelas" name="kelas" placeholder="Kelas" required>
     <input type="text" id="tujuan" name="tujuan" placeholder="Pendapatmu ditujukan ke" required>
