--- a/index.html
+++ b/index.html
@@ -10,25 +10,26 @@
 
 <body>
     <div class="form-container">
-        <h2>Message Form</h2>
+        <h2>Smaration</h2>
+        <a>Smafour Aspiration</a>
         <div class="form-wrapper">
             <form action="#" method="post">
-                <label for="name">Name:</label>
+                <label for="name">Nama</label>
                 <input type="text" id="name" name="name" required>
 
-                <label for="class">Class:</label>
+                <label for="class">Kelas</label>
                 <input type="text" id="class" name="class" required>
 
-                <label for="recipient">Recipient:</label>
+                <label for="recipient">Pesanmu ditujukan ke</label>
                 <input type="text" id="recipient" name="recipient" required>
 
-                <label for="message">Message:</label>
+                <label for="message">Pesan</label>
                 <textarea id="message" name="message" rows="4" required></textarea>
 
-                <label for="date">Date:</label>
+                <label for="date">Tanggal</label>
                 <input type="date" id="date" name="date" required>
 
-                <button type="submit">Submit</button>
+                <button type="submit">Kirim</button>
             </form>
         </div>
     </div>
