--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="form-container">
-        <h2>Smaration</h2>
-        <a>Smafour Aspiration</a>
+        <h1>Smaration</h1>
+        <h3>Smafour Aspiration</h3>
         <div class="form-wrapper">
             <form action="#" method="post">
                 <label for="name">Nama</label>
