--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="form-container">
-        <h1>Smaration</h1>
-        <h3>Smafour Aspiration</h3>
+        <h1 class="judul">Smaration</h1>
+        <h3 class="judul">Smafour Aspiration</h3>
         <div class="form-wrapper">
             <form action="#" method="post">
                 <label for="name">Nama</label>
